# vet-agent

./: .gitignore  README.md  acceptance_tests.py  main.py  pyproject.toml  test_main.py
.github/workflows/: ci.yml
agent/: agent_eval.py  agent_interface.py  eval_book_then_confirm.py  eval_multi_turn.py  eval_single_call.py  eval_single_call_no_db.py  local_agent.py  mock_agent.py  models.py  prod_agent.py  test_agent_base.py  test_prod_agent.py
context_store/: context_store.py  test_context_store.py
summarizer_agent/: eval_summarizer_agent.py  local_summarizer_agent.py  prod_summarizer_agent.py  summarizer_base.py
