[project]
name = "vet-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.137.2",
    "httpx2>=2.4.0",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "logfire>=4.37.0",
    "openai>=2.43.0",
    "pydantic-ai-slim[google,openai]>=1.107.0",
    "pydantic-evals[logfire]>=1.107.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-multipart>=0.0.32",
    "twilio>=9.10.9",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
